--- a/styles.css
+++ b/styles.css
@@ -93,9 +93,97 @@ nav ul li a:hover::after {
   font-size: 60px;
 }
 
-.header-text h1,
-h2 span {
+.header-text h1 span,
+h2 {
   color: var(--customColor);
+}
+
+.header-text h1 span {
+  color: var(--customColor);
+  text-decoration: underline;
+}
+
+
+
+/* Controls  */
+
+.control {
+  position: fixed;
+  right: -4rem;
+  top: 15%;
+  transition: all 300ms ease-in-out;
+  z-index: 1000;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.control.open {
+  right: 0;
+}
+
+.control .widget {
+  position: absolute;
+  left: -2.5rem;
+  border-radius: 1rem 0 0 1rem;
+  cursor: pointer;
+  padding: 0.5rem 0.6rem;
+  background-color: #fff;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.control .widget i {
+  font-size: 2rem;
+  animation: spin 2s linear infinite;
+  color: #000;
+  text-align: center;
+}
+
+.control .colors {
+  background-color: #fff;
+  padding: 1rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border-bottom-left-radius: 0.5rem;
+}
+
+.control .colors span {
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.7rem;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.control .colors span:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.control .colors span:nth-child(1) {
+  background-color: var(--blue);
+}
+
+.control .colors span:nth-child(2) {
+  background-color: var(--orange);
+}
+
+.control .colors span:nth-child(3) {
+  background-color: var(--purple);
+}
+
+.control .colors span:nth-child(4) {
+  background-color: var(--cyan);
 }
 
 /* CSS for about section  */
@@ -474,7 +562,7 @@ nav .fa-solid {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(images/phone-background.png);
+    background-image: url(images/mobile-background.jpg);
   }
 
   .header-text {
@@ -556,86 +644,5 @@ nav .fa-solid {
 
 
 
-
-/* Controls  */
-
-.control {
-  position: fixed;
-  right: -4rem;
-  top: 15%;
-  transition: all 300ms ease-in-out;
-  z-index: 1000;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.control.open {
-  right: 0;
-}
-
-.control .widget {
-  position: absolute;
-  left: -2.5rem;
-  border-radius: 1rem 0 0 1rem;
-  cursor: pointer;
-  padding: 0.5rem 0.6rem;
-  background-color: #fff;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.control .widget i {
-  font-size: 2rem;
-  animation: spin 2s linear infinite;
-  color: #000;
-  text-align: center;
-}
-
-.control .colors {
-  background-color: #fff;
-  padding: 1rem;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  border-bottom-left-radius: 0.5rem;
-}
-
-.control .colors span {
-  display: block;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.7rem;
-  border-radius: 50%;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-
-.control .colors span:not(:last-child) {
-  margin-bottom: 1rem;
-}
-
-.control .colors span:nth-child(1) {
-  background-color: var(--blue);
-}
-
-.control .colors span:nth-child(2) {
-  background-color: var(--orange);
-}
-
-.control .colors span:nth-child(3) {
-  background-color: var(--purple);
-}
-
-.control .colors span:nth-child(4) {
-  background-color: var(--cyan);
-}
 
 
